# Sengpt

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: sengpt.yml  test.yml
sengpt/: __main__.py  argparser.py  config.py  main.py  sengpt.py  utils.py
sengpt/re_gpt/: __init__.py  arkose_manager_utils.py  async_chatgpt.py  errors.py  models.py  prompt_response_chunk.py  test_utils.py  utils.py
sengpt/re_gpt/async_/: arkose_manager.py  chatgpt.py  conversation.py  test.py
